--- a/acttis-moran-react/public/index.html
+++ b/acttis-moran-react/public/index.html
@@ -11,6 +11,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
     <!-- Imports -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&family=Secular+One&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
