--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       content="Web site created using create-react-app"
     />
     <title>You Ticket</title>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/ticket.ico" />
 
     <!-- Imports -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
